--- a/posts/presentation_reveal_essai/index.qmd
+++ b/posts/presentation_reveal_essai/index.qmd
@@ -30,8 +30,8 @@ format:
 ### Pour faire simple
 
 - dans le terminal de RStudio : quarto render
-- Explorateur windows : ouvrir "_posts" (C:\\TEXTES\\ECLAIRAGE\\REVEAL_MATH_SLG\\quarto_slg\\math_blog\\math_blog\\docs)
-- Dans windows ouvrir un terminal de commande (administrateur) : cd C:\\TEXTES\\ECLAIRAGE\\REVEAL_MATH_SLG\\quarto_slg\\math_blog\\math_blog\\docs
+- Explorateur windows : ouvrir C:\\TEXTES\\ECLAIRAGE\\REVEAL_MATH_SLG\\quarto_slg\\math_blog\\math_blog
+- Dans windows ouvrir un terminal de commande (administrateur) : cd C:\\TEXTES\\ECLAIRAGE\\REVEAL_MATH_SLG\\quarto_slg\\math_blog\\math_blog
 - git init
 - git add .
 - git commit -m "first commit"
@@ -50,8 +50,17 @@ format:
 -- Dans windows panneau de configuration -> Comptes d'utilisateurs -> Gestionnaire d'identifications -> Informations d'identification Windows
 - Effacer les "identifications génériques github"
 
-# Slide 2
+# Mise à jour du site
 
-## Slide 2.1
+## Dans RStudio
 
-## Slide 2.2
+- Changer dans les fichiers *.qmd les textes et les idées (si, si)
+- Enregistrer les changements (CTRL-S)
+- Dans le terminal de RStudio : quarto render
+
+
+## Dans le terminal de commande windows : 
+
+- git add .
+- git commit -m "SECOND commit"
+- git push -u origin main
