Description quarto et github 4

--- a/posts/presentation_reveal_essai/index.qmd
+++ b/posts/presentation_reveal_essai/index.qmd
@@ -50,7 +50,7 @@ format:
 -- Dans windows panneau de configuration -> Comptes d'utilisateurs -> Gestionnaire d'identifications -> Informations d'identification Windows
 - Effacer les "identifications génériques github"
 
-# Mise à jour du site
+# Mise à jour du site.
 
 ## Dans RStudio
 
