--- a/posts/presentation_reveal_essai/index.qmd
+++ b/posts/presentation_reveal_essai/index.qmd
@@ -27,11 +27,8 @@ format:
 ## Faire un site avec "Github pages" {.scrollable}
 
 
-### Pour faire simple
-
 - Dans le terminal de RStudio : quarto render
-- Explorateur windows : ouvrir C:\\TEXTES\\ECLAIRAGE\\REVEAL_MATH_SLG\\quarto_slg\\math_blog\\math_blog
-- Dans windows ouvrir un terminal de commande (administrateur) : cd C:\\TEXTES\\ECLAIRAGE\\REVEAL_MATH_SLG\\quarto_slg\\math_blog\\math_blog
+- Dans windows ouvrir un terminal de commande (administrateur) : cd C:\\math_blog
 - git init
 - git add --all
 - git commit -m "first commit"
